--- a/vids/videos.html
+++ b/vids/videos.html
@@ -187,8 +187,6 @@ One of the most fruitful aspects of working the project was spending time with r
 </p>
 </div>
 <h2><i>Photos taken with a handheld camera, either from a blind or from 'stalking'</i></h2>
-<h3><i>Click to enlarge</i></h3>
-
 
     </div>
 
@@ -196,10 +194,10 @@ One of the most fruitful aspects of working the project was spending time with r
 
     <!-- Loop through 5 rows of 4 images each -->
     <!-- Gallery items 1-20 -->
-        <a href="1.png" target="_blank"><img src="1.png" alt="wild deer photo 1"></a>
-        <a href="2.png" target="_blank"><img src="2.png" alt="wild deer photo 2"></a>
-        <a href="3.png" target="_blank"><img src="3.png" alt="wild deer photo 3"></a>
-        <a href="4.png" target="_blank"><img src="4.png" alt="wild deer photo 4"></a>
+        <a href="#" target="_blank"><img src="1.png" alt="wild deer photo 1"></a>
+        <a href="#" target="_blank"><img src="2.png" alt="wild deer photo 2"></a>
+        <a href="#" target="_blank"><img src="3.png" alt="wild deer photo 3"></a>
+        <a href="#" target="_blank"><img src="4.png" alt="wild deer photo 4"></a>
 
 </div>
 
