--- a/cabphoto/cabphoto.html
+++ b/cabphoto/cabphoto.html
@@ -133,57 +133,57 @@
     <!-- Loop through 5 rows of 4 images each -->
     <!-- Gallery items 1-20 -->
         <div class="gallery-item">
-        <a href="9.png" target="_blank"><img src="northeast1.jpg" alt="arcade photo 9"></a>
+        <a href="#" target="_blank"><img src="northeast1.jpg" alt="arcade photo 9"></a>
 		<i>Northeast Region: Morning</i>
     </div>
     <div class="gallery-item">
-        <a href="10.png" target="_blank"><img src="northeast2.jpg" alt="arcade photo 10"></a>
+        <a href="#" target="_blank"><img src="northeast2.jpg" alt="arcade photo 10"></a>
 		<i>Midwest Region: Mid-day</i>
     </div>
     <div class="gallery-item">
-        <a href="11.png" target="_blank"><img src="northeast3.jpg" alt="arcade photo 11"></a>
+        <a href="#" target="_blank"><img src="northeast3.jpg" alt="arcade photo 11"></a>
 		<i>Midwest Region: Evening</i>
     </div>
     <div class="gallery-item">
-        <a href="12.png" target="_blank"><img src="northeast4.jpg" alt="arcade photo 12"></a>
+        <a href="#" target="_blank"><img src="northeast4.jpg" alt="arcade photo 12"></a>
 		<i>Midwest Region: Night</i>
     </div>
     
     <div class="gallery-item">
-        <a href="5.png" target="_blank"><img src="5.png" alt="arcade photo 5"></a>
+        <a href="#" target="_blank"><img src="5.png" alt="arcade photo 5"></a>
 		<i>Midwest Region: Morning</i>
     </div>
     <div class="gallery-item">
-        <a href="6.png" target="_blank"><img src="6.png" alt="arcade photo 6"></a>
+        <a href="#" target="_blank"><img src="6.png" alt="arcade photo 6"></a>
 		<i>Midwest Region: Mid-day</i>
     </div>
     <div class="gallery-item">
-        <a href="7.png" target="_blank"><img src="7.png" alt="arcade photo 7"></a>
+        <a href="#" target="_blank"><img src="7.png" alt="arcade photo 7"></a>
 		<i>Midwest Region: Evening</i>
     </div>
     <div class="gallery-item">
-        <a href="8.png" target="_blank"><img src="8.png" alt="arcade photo 8"></a>
+        <a href="#" target="_blank"><img src="8.png" alt="arcade photo 8"></a>
 		<i>Midwest Region: Night</i>
     </div>
 <div class="gallery-item">
-        <a href="1.png" target="_blank"><img src="1.png" alt="arcade photo 1"></a>
+        <a href="#" target="_blank"><img src="1.png" alt="arcade photo 1"></a>
 		<i>South Region: Morning</i>
     </div>
     <div class="gallery-item">
-        <a href="2.png" target="_blank"><img src="2.png" alt="arcade photo 2"></a>
+        <a href="#" target="_blank"><img src="2.png" alt="arcade photo 2"></a>
 		<i>South Region: Mid-day</i>
     </div>
     <div class="gallery-item">
-        <a href="3.png" target="_blank"><img src="3.png" alt="arcade photo 3"></a>
+        <a href="#" target="_blank"><img src="3.png" alt="arcade photo 3"></a>
 		<i>South Region: Evening</i>
     </div>
     <div class="gallery-item">
-        <a href="4.png" target="_blank"><img src="4.png" alt="arcade photo 4"></a>
+        <a href="#" target="_blank"><img src="4.png" alt="arcade photo 4"></a>
 		<i>South Region: Night</i>
     </div>
     <p>Below is an image of the machine - when the project was still a work in progress - on display at Paris Photo fair in 2023 (in l'Avant Galerie Vossen's booth)</p>
     <div class="gallery">
-    	<a href="../bbhmachine.png" target="_blank"><img src="../bbhmachine_dithered.png"></a>
+    	<a href="#" target="_blank"><img src="../bbhmachine_dithered.png"></a>
 
     </div>
 
