--- a/next.html
+++ b/next.html
@@ -104,7 +104,7 @@
 
 			<p>For now, it will be on display at l'Avant Galerie Vossen, in Paris, from January 23rd until early March. After that, it will be on display in the United States.</p>
 			<p>Previously, a prototype was on display at Paris Photo: 2023</p>
-			<a href="bbhmachine.png"> <img src="bbhmachine_dithered.png"></a>
+			<a href="#"> <img src="bbhmachine_dithered.png"></a>
         </p>
 
 <img width="70%" src="footer.gif"/>
