--- a/dev/development.html
+++ b/dev/development.html
@@ -171,40 +171,40 @@
 		<p>Below are a few images of procedurally generated landscapes from a recording of Big Buck Hunter: Restoration - however you can see more on the webpage dedicated to <a href="../cabphoto/cabphoto.html"><b>Photos of the modified arcade cabinet</b></a>.</p>
 		
 		<div class="generation-gallery">
-			<a href="gen (2).jpg" target="_blank">
+			<a href="#" target="_blank">
 				<img src="gen (2).jpg" alt="Camera Angle 1">
 			</a>
-			<a href="gen (3).jpg" target="_blank">
+			<a href="#" target="_blank">
 				<img src="gen (3).jpg" alt="Camera Angle 2">
 			</a>
-			<a href="gen (1).jpg" target="_blank">
+			<a href="#" target="_blank">
 				<img src="gen (1).jpg" alt="Camera Angle 3">
 			</a>
-			<a href="gen (5).jpg" target="_blank">
+			<a href="#" target="_blank">
 				<img src="gen (5).jpg" alt="Camera Angle 4">
 			</a>
-			<a href="gen_ne1.png" target="_blank">
+			<a href="#" target="_blank">
 				<img src="gen_ne1.png" alt="Camera Angle 5">
 			</a>
-			<a href="gen_ne2.png" target="_blank">
+			<a href="#" target="_blank">
 				<img src="gen_ne2.png" alt="Camera Angle 5">
 			</a>
-			<a href="gen_ne3.png" target="_blank">
+			<a href="#" target="_blank">
 				<img src="gen_ne3.png" alt="Camera Angle 5">
 			</a>
-			<a href="gen_ne4.png" target="_blank">
+			<a href="#" target="_blank">
 				<img src="gen_ne4.png" alt="Camera Angle 5">
 			</a>
-			<a href="gen_s1.png" target="_blank">
+			<a href="#" target="_blank">
 				<img src="gen_s1.png" alt="Camera Angle 5">
 			</a>
-						<a href="gen_s2.png" target="_blank">
+						<a href="#" target="_blank">
 					<img src="gen_s2.png" alt="Camera Angle 5">
 			</a>
-						<a href="gen_s3.png" target="_blank">
+						<a href="#" target="_blank">
 				<img src="gen_s3.png" alt="Camera Angle 5">
 			</a>
-						<a href="gen_s4.png" target="_blank">
+						<a href="#" target="_blank">
 				<img src="gen_s4.png" alt="Camera Angle 5">
 			</a>
 		</div>
@@ -220,16 +220,16 @@
 		<br>
 
 		<div class="generation-gallery">
-    <a href="pheasants_original_game.png" target="_blank">
+    <a href="#" target="_blank">
       <img src="pheasants_original_game.png" alt="Pheasants in the original game">
     </a>
-    <a href="ducks_original_game.png" target="_blank">
+    <a href="#" target="_blank">
       <img src="ducks_original_game.png" alt="Ducks in the original game">
     </a>
-    <a href="quail_original_game.png" target="_blank">
+    <a href="#" target="_blank">
       <img src="quail_original_game.png" alt="Quail in the original game">
     </a>
-        <a href="turkeys_original_game.png" target="_blank">
+        <a href="#" target="_blank">
       <img src="turkeys_original_game.png" alt="Turkeys in the original game">
     </a>
   </div>
@@ -238,13 +238,13 @@
 	<h2>The animals in <i>Big Buck Hunter: Restoration</i></h2>
 	
 	<div class="generation-gallery">
-    <a href="pheasants_restoration.png" target="_blank">
+    <a href="#" target="_blank">
       <img src="pheasants_restoration.png" alt="Pheasants in BBH: Restoration">
     </a>
-        <a href="ducks_restoration.png" target="_blank">
+        <a href="#" target="_blank">
       <img src="ducks_restoration.png" alt="Ducks in BBH: Restoration">
     </a>
-        <a href="turkeys_restoration.png" target="_blank">
+        <a href="#" target="_blank">
       <img src="turkeys_restoration.png" alt="Pheasants in BBH: Restoration">
     </a>
   </div>	
